cabal-testsuite/PackageTests/ProjectConfig/FieldStanzaConfusion/cabal.out
# cabal build
Error: [Cabal-7167]
Error encountered when parsing project file cabal.project:

cabal.project:4:1: error:
'source-repository-package' is a stanza, not a field. Remove the trailing ':' to parse a stanza.

    1 | packages: .
    2 | 
    3 | -- This is an error; a trailing `:` is syntax for a field, not a stanza!
    4 | source-repository-package:
      | ^

